shmuel 07.05.2020 22:58:33 +0300 - build 746

1. LuaFAR: refactoring.

shmuel 05.05.2020 23:27:35 +0300 - build 745

1. LuaFAR: make tPluginPanelItem.UserData accessible from coroutines (and therefore macros).

shmuel 03.05.2020 14:12:01 +0200 - build 744

1. Minor fix related to build 738.

shmuel 26.04.2020 19:59:14 +0200 - build 743

1. Refactoring.

shmuel 25.04.2020 21:24:46 +0200 - build 742

1. Fix build 741.

shmuel 25.04.2020 18:44:02 +0200 - build 741

1. Minor fixes and refactoring.

shmuel 24.04.2020 21:12:21 +0200 - build 740

1. GCC warnings + micro-refactoring.

shmuel 19.04.2020 11:22:12 +0200 - build 739

1. LuaFAR: fix GCC warnings from appveyor.

shmuel 10.04.2020 21:59:24 +0200 - build 738

1. LuaFAR: update luautf8 library to release 0.1.2.

shmuel 30.03.2020 15:14:49 +0200 - build 737

1. LuaFAR: add file:read("*b") - read binary line.

shmuel 04.03.2020 16:14:42 +0200 - build 736

1. LuaFAR: win.CreateDir() preserves trailing spaces.

shmuel 03.03.2020 13:29:18 +0200 - build 735

1. LuaFAR: fix win.XX functions dependent on FileTimeResolution broken since build 704
   (they were broken only when luafar3.dll was used outside Far Manager).

shmuel 02.03.2020 19:10:27 +0200 - build 734

1. LuaFAR: added function far.GetLuafarVersion.
   luafar3.dll and luamacro.dll will share the same version within any given Far Manager build.

shmuel 01.03.2020 22:01:50 +0200 - build 733

1. LuaFAR: more 730.1 (win.FileTimeToSystemTime).

shmuel 17.02.2020 08:06:24 +0200 - build 732

1. LuaFAR: allow 64-bit range for floating point arguments where 64-bit integers expected
           (was: 53 bits allowed).

2. LuaFAR (generic plugin): fix a nasty pointer arithmetics bug in SetStartupInfoW().

shmuel 15.02.2020 19:31:22 +0200 - build 731

1. Fix build 730.1.

shmuel 15.02.2020 18:50:58 +0200 - build 730

LuaFAR:

1. bit64-library functions (and some other functions, e.g. win.SetFileTimes)
   accept string parameters if they are convertible to 64-bit integers.
