@@ -1,6 +1,6 @@
 function export.GetGlobalInfo()
   return {
-    Version       = { 3, 0, 0, 746 },
+    Version       = { 3, 0, 0, 747 },
     MinFarVersion = { 3, 0, 0, 5171 },
     Guid          = win.Uuid("4EBBEFC8-2084-4B7F-94C0-692CE136894D"),
     Title         = "LuaMacro",
